3-apps/prometheus/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.grafana.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: prometheus-community-grafana
          port: 80
    - match: Host(`grafana.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: prometheus-community-grafana
          port: 80
      middlewares:
        - name: default-headers
